fixes menu on mobile and images in news section

--- a/css/mod-home.scss
+++ b/css/mod-home.scss
@@ -63,7 +63,7 @@
             .news-image {
                 img {
                     width: 100%;
-                    height: auto;
+                    height: 100%;
                     object-fit: cover;
                 }
             }
