--- a/css/mod-navigation.scss
+++ b/css/mod-navigation.scss
@@ -208,12 +208,19 @@
                             padding: 5px;
                             .sub-menu {
                                 position: initial;
-                                max-height: 0;
-                                overflow: hidden;
-                                margin: 0;
+                                visibility: visible;
+                                opacity: 1;
                                 flex-direction: column;
                                 &:before {
                                     display: none;
+                                }
+                                .menu-item {
+                                    padding-left: 15px;
+                                    .sub-menu {
+                                        .menu-item {
+                                            padding-left: 15px;
+                                        }
+                                    }
                                 }
                             }
                             &.tapped {
